# liplay

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: main.rs  player.rs
